feat(mgr-applications): enhance module loading with application ID handling and fallback logic